Add loops and execution time calculation to all versions of transpose

--- a/Homework1/Makefile
+++ b/Homework1/Makefile
@@ -1,7 +1,7 @@
 CC = c++
 LIB_HOME=.
 LIBS=-L${LIB_HOME}/lib64
-OPT = -std=c++14
+OPT = -std=c++14 -O3
 
 TARGETDIR := bin
 SRCDIR := src
@@ -18,13 +18,13 @@ $(TARGETDIR)/simple_transpose: $(SRCDIR)/simple_transpose.cpp $(INCLUDE_HEADERS)
 	mkdir -p $(@D)
 	$(CC) $^ -o $@ $(LIBS) $(OPT) $(INCLUDE_CPP)
 
-$(TARGETDIR)/square_transpose: $(SRCDIR)/square_transpose.cpp 
+$(TARGETDIR)/square_transpose: $(SRCDIR)/square_transpose.cpp $(INCLUDE_HEADERS)
 	mkdir -p $(@D)
-	$(CC) $^ -o $@ $(LIBS) $(OPT)
+	$(CC) $^ -o $@ $(LIBS) $(OPT) $(INCLUDE_CPP)
 
-$(TARGETDIR)/block_transpose: $(SRCDIR)/block_transpose.cpp
+$(TARGETDIR)/block_transpose: $(SRCDIR)/block_transpose.cpp $(INCLUDE_HEADERS)
 	mkdir -p $(@D)
-	$(CC) $^ -o $@ $(LIBS) $(OPT)
+	$(CC) $^ -o $@ $(LIBS) $(OPT) $(INCLUDE_CPP)
 
 
 clean:
