Try to fix makefile

--- a/Homework2/Makefile
+++ b/Homework2/Makefile
@@ -1,7 +1,11 @@
-CC = nvcc
+CC = c++
 LIB_HOME=.
 LIBS=-L${LIB_HOME}/lib64
+OPT = -std=c++1
 
+NVCC = nvcc
+NVCC_FLAGS = 
+NVCC_LIBS = 
 
 TARGETDIR := bin
 SRCDIR := src
@@ -13,9 +17,8 @@ INCLUDE_CPP := $(INCDIR)/matrix_generation.cpp
 
 all: $(TARGETDIR)/simple_transpose 
 
-$(TARGETDIR)/simple_transpose: $(SRCDIR)/simple_transpose.cu $(INCLUDE_HEADERS)
-	mkdir -p $(@D)
-	$(CC) -o $@ $(LIBS) $(OPT) $(INCLUDE_CPP)
+$(TARGETDIR)/simple_transpose: $(SRCDIR)/simple_transpose.cu
+	$(NVCC) $(NVCC_FLAGS) -c $< -o $@ $(NVCC_LIBS)
 
 clean:
 	$(TARGETDIR)/*
