Simplify makefile for tests

--- a/Homework2/Makefile
+++ b/Homework2/Makefile
@@ -15,15 +15,11 @@ INCLUDE_HEADERS := $(INCDIR)/matrix_generation.h
 INCLUDE_CPP := $(INCDIR)/matrix_generation.cpp
 
 
-all: $(TARGETDIR)/simple_transpose.o $(TARGETDIR)/simple_transpose 
+all: $(TARGETDIR)/simple_transpose.o 
 
 $(TARGETDIR)/simple_transpose.o: $(SRCDIR)/simple_transpose.cu
 	mkdir -p $(@D)
 	$(NVCC) $(NVCC_FLAGS) -c $< -o $@ $(NVCC_LIBS) 
-
-$(TARGETDIR)/simple_transpose: $(TARGETDIR)/simple_transpose.o $(INCLUDE_HEADERS)
-	mkdir -p $(@D)
-	$(CC) -o $@ $(LIBS) $(OPT) $(INCLUDE_CPP) $^
 
 clean:
 	$(TARGETDIR)/*
