--- a/Homework2/Makefile
+++ b/Homework2/Makefile
@@ -5,8 +5,7 @@ OPT = -std=c++14
 
 NVCC = nvcc
 NVCC_FLAGS = 
-NVCC_LIBS = -I$(CUDA_INSTALL_PATH)/include
-
+NVCC_LIBS = 
 TARGETDIR := bin
 SRCDIR := src
 INCDIR = include
@@ -15,11 +14,19 @@ INCLUDE_HEADERS := $(INCDIR)/matrix_generation.h
 INCLUDE_CPP := $(INCDIR)/matrix_generation.cpp
 
 
-all: $(TARGETDIR)/simple_transpose.o 
+all: $(TARGETDIR)/simple_transpose.o $(TARGETDIR)/matrix_generation $(TARGETDIR)/simple_transpose
 
 $(TARGETDIR)/simple_transpose.o: $(SRCDIR)/simple_transpose.cu
 	mkdir -p $(@D)
 	$(NVCC) $(NVCC_FLAGS) -c $< -o $@ $(NVCC_LIBS) 
 
+$(TARGETDIR)/matrix_generation: $(INCLUDE_CPP) $(INCLUDE_HEADERS)
+	mkdir -p $(@D)
+	$(CC) $^ -o $@ $(LIBS) $(OPT)
+
+$(TARGETDIR)/simple_transpose:
+	$(NVCC) -o $@ $(TARGETDIR)/simple_transpose.o $(TARGETDIR)/matrix_generation -lcudart -lcuda 
+
+	
 clean:
 	$(TARGETDIR)/*
