--- a/Homework2/Makefile
+++ b/Homework2/Makefile
@@ -14,7 +14,7 @@ INCLUDE_HEADERS := $(INCDIR)/matrix_generation.h
 INCLUDE_CPP := $(INCDIR)/matrix_generation.cpp
 
 
-all: $(TARGETDIR)/simple_transpose.o $(TARGETDIR)/matrix_generation.o $(TARGETDIR)/simple_transpose
+all: $(TARGETDIR)/simple_transpose.o $(TARGETDIR)/matrix_generation.o 
 
 $(TARGETDIR)/simple_transpose.o: $(SRCDIR)/simple_transpose.cu
 	mkdir -p $(@D)
@@ -22,7 +22,7 @@ $(TARGETDIR)/simple_transpose.o: $(SRCDIR)/simple_transpose.cu
 
 $(TARGETDIR)/matrix_generation.o: $(INCLUDE_CPP) $(INCLUDE_HEADERS)
 	mkdir -p $(@D)
-	$(CC) -o $@ $< $(LIBS) $(OPT)
+	$(CC) -o $@ -c $< $(LIBS) $(OPT)
 
 $(TARGETDIR)/simple_transpose:
 	$(NVCC) -o $@ $(TARGETDIR)/simple_transpose.o $(TARGETDIR)/matrix_generation.o -lcudart -lcuda 
