Add cuda stuff to makefile

--- a/FinalProject/Makefile
+++ b/FinalProject/Makefile
@@ -1,9 +1,11 @@
 CC = c++
 LIB_HOME=.
 LIBS=-L${LIB_HOME}/lib64
+OPT = -std=c++14 -O2
 
-OPT = -std=c++14 -g $(USER_COMPILE_FLAGS)
-
+NVCC = nvcc
+NVCC_FLAGS = -lcusparse
+NVCC_LIBS = 
 TARGETDIR := bin
 SRCDIR := src
 INCDIR = include
@@ -12,11 +14,18 @@ INCLUDE_HEADERS := $(INCDIR)/mmio.h
 INCLUDE_CPP := $(INCDIR)/mmio.c
 
 
-all: $(TARGETDIR)/import_sparse
+all: $(TARGETDIR)/transpose.o $(TARGETDIR)/import_sparse.o $(TARGETDIR)/transpose
 
-$(TARGETDIR)/import_sparse: $(INCDIR)/import_sparse_matrix.cpp $(INCLUDE_HEADERS)
+$(TARGETDIR)/transpose.o: $(SRCDIR)/transpose.cu
+	mkdir -p $(@D)
+	$(NVCC) $(NVCC_FLAGS) -c $< -o $@ $(NVCC_LIBS) 
+
+$(TARGETDIR)/import_sparse.o: $(INCDIR)/import_sparse_matrix.cpp $(INCLUDE_HEADERS)
 	mkdir -p $(@D)
 	$(CC) $^ -o $@ $(LIBS) $(OPT) $(INCLUDE_CPP)
+
+$(TARGETDIR)/transpose:
+	$(NVCC) -o $@ $(TARGETDIR)/transpose.o $(TARGETDIR)/import_sparse.o -lcudart -lcuda  -lcusparse
 
 clean:
 	$(TARGETDIR)/*
