--- a/FinalProject/Makefile
+++ b/FinalProject/Makefile
@@ -4,7 +4,7 @@ LIBS=-L${LIB_HOME}/lib64
 OPT = -std=c++14 -O2
 
 NVCC = nvcc
-NVCC_FLAGS = -lcusparse
+NVCC_FLAGS =
 NVCC_LIBS = 
 TARGETDIR := bin
 SRCDIR := src
@@ -14,7 +14,7 @@ INCLUDE_HEADERS := $(INCDIR)/mmio.h
 INCLUDE_CPP := $(INCDIR)/mmio.c
 
 
-all: $(TARGETDIR)/transpose.o $(TARGETDIR)/import_sparse.o $(TARGETDIR)/transpose
+all: $(TARGETDIR)/transpose.o $(TARGETDIR)/import_sparse.o
 
 $(TARGETDIR)/transpose.o: $(SRCDIR)/transpose.cu
 	mkdir -p $(@D)
@@ -23,9 +23,6 @@ $(TARGETDIR)/transpose.o: $(SRCDIR)/transpose.cu
 $(TARGETDIR)/import_sparse.o: $(INCDIR)/import_sparse_matrix.cpp $(INCLUDE_HEADERS)
 	mkdir -p $(@D)
 	$(CC) $^ -o $@ $(LIBS) $(OPT) $(INCLUDE_CPP)
-
-$(TARGETDIR)/transpose:
-	$(NVCC) -o $@ $(TARGETDIR)/transpose.o $(TARGETDIR)/import_sparse.o -lcudart -lcuda  -lcusparse
 
 clean:
 	$(TARGETDIR)/*
