--- a/FinalProject/Makefile
+++ b/FinalProject/Makefile
@@ -10,8 +10,8 @@ TARGETDIR := bin
 SRCDIR := src
 INCDIR = include
 
-INCLUDE_HEADERS := $(INCDIR)/mmio.h
-INCLUDE_CPP := $(INCDIR)/mmio.c
+INCLUDE_HEADERS := $(INCDIR)/mmio.h $(INCDIR)/import_sparse_matrix.h
+INCLUDE_CPP := $(INCDIR)/mmio.c $(INCDIR)/import_sparse_matrix.cpp
 
 
 all: $(TARGETDIR)/transpose.o $(TARGETDIR)/import_sparse.o $(TARGETDIR)/transpose
@@ -20,9 +20,9 @@ $(TARGETDIR)/transpose.o: $(SRCDIR)/transpose.cu
 	mkdir -p $(@D)
 	$(NVCC) $(NVCC_FLAGS) -c $< -o $@ $(NVCC_LIBS) 
 
-$(TARGETDIR)/import_sparse.o: $(INCDIR)/import_sparse_matrix.cpp $(INCLUDE_HEADERS)
+$(TARGETDIR)/import_sparse.o: $(INCLUDE_CPP) $(INCLUDE_HEADERS)
 	mkdir -p $(@D)
-	$(CC) $^ -o $@ $(LIBS) $(OPT) $(INCLUDE_CPP)
+	$(CC) -o $@ -c $< $(LIBS) $(OPT)
 
 $(TARGETDIR)/transpose:
 	$(NVCC) -o $@ $(TARGETDIR)/transpose.o $(TARGETDIR)/import_sparse.o -lcudart -lcuda -lcusparse
